# GridSearcher

./: .gitignore  README.md  example.py  pyproject.toml  setup.py
gridsearcher/: __init__.py  configs.py  file_locker.py  gridsearcher.py  sbatch.py  tools.py
